third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/migrated_tests/round-trip/public_closures_in_enums.decompiled.public-struct.exp
processed 6 tasks
task 0 lines 3-79:  publish [module 0xc0ffee::m {]
Error: compilation errors:
 error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:57:10
   │
57 │         &p0._0
   │          ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`

error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:61:10
   │
61 │         &p0._0
   │          ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`

error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:65:10
   │
65 │         &p0._0
   │          ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`

error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:69:14
   │
69 │         &mut p0._0
   │              ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`

error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:73:14
   │
73 │         &mut p0._0
   │              ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`

error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:77:14
   │
77 │         &mut p0._0
   │              ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`


task 1 lines 82-231:  publish [module 0xc0ffee::m_closures_in_enums {]
Error: compilation errors:
 error: unbound module
   ┌─ TEMPFILE1:84:9
   │
84 │     use 0xc0ffee::m;
   │         ^^^^^^^^^^^ Invalid 'use'. Unbound module: '0xC0FFEE::m'

error: unbound module
   ┌─ TEMPFILE1:85:23
   │
85 │     fun get_func(p0: &m::Function): &||(u64) has copy {
   │                       ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:86:17
   │
86 │         assert!(m::test_variant_0xc0ffee_m_Function_NoParam(p0), 42);
   │                 ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:87:9
   │
87 │         m::borrow_0xc0ffee_m_Function_0_0_NoParam(p0)
   │         ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:89:32
   │
89 │     fun get_func_recursive(p0: m::Function): ||(u64) {
   │                                ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:91:19
   │
91 │         let _v1 = m::test_variant_0xc0ffee_m_Function_NoParam(_v0);
   │                   ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:95:25
   │
95 │                     if (m::test_variant_0xc0ffee_m_Function_OneParam(_v0)) break;
   │                         ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:96:25
   │
96 │                     if (m::test_variant_0xc0ffee_m_Function_TwoParam(_v0)) break 'l0;
   │                         ^ Unbound module or type alias 'm'

error: unbound module
   ┌─ TEMPFILE1:99:24
   │
99 │                 return m::unpack_0xc0ffee_m_Function_NoParam(p0)
   │                        ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:101:23
    │
101 │             let _v2 = m::unpack_0xc0ffee_m_Function_OneParam(p0);
    │                       ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:102:39
    │
102 │             return get_func_recursive(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__get_func_recursive(_v2)))
    │                                       ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:104:19
    │
104 │         let _v3 = m::unpack_0xc0ffee_m_Function_TwoParam(p0);
    │                   ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:105:28
    │
105 │         get_func_recursive(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__get_func_recursive(_v3, arg0)))
    │                            ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:113:22
    │
113 │     fun runner_1(p0: m::Function): u64 {
    │                      ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:115:19
    │
115 │         let _v1 = m::test_variant_0xc0ffee_m_Function_NoParam(_v0);
    │                   ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:119:25
    │
119 │                     if (m::test_variant_0xc0ffee_m_Function_OneParam(_v0)) break;
    │                         ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:120:25
    │
120 │                     if (m::test_variant_0xc0ffee_m_Function_TwoParam(_v0)) break 'l0;
    │                         ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:123:27
    │
123 │                 let _v2 = m::unpack_0xc0ffee_m_Function_NoParam(p0);
    │                           ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:126:23
    │
126 │             let _v3 = m::unpack_0xc0ffee_m_Function_OneParam(p0);
    │                       ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:129:19
    │
129 │         let _v4 = m::unpack_0xc0ffee_m_Function_TwoParam(p0);
    │                   ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:132:22
    │
132 │     fun runner_2(p0: m::Function): u64 {
    │                      ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:135:13
    │
135 │         if (m::test_variant_0xc0ffee_m_Function_NoParam(_v1)) _v0 = m::unpack_0xc0ffee_m_Function_NoParam(p0) else if (m::test_variant_0xc0ffee_m_Function_OneParam(_v1)) {
    │             ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:135:69
    │
135 │         if (m::test_variant_0xc0ffee_m_Function_NoParam(_v1)) _v0 = m::unpack_0xc0ffee_m_Function_NoParam(p0) else if (m::test_variant_0xc0ffee_m_Function_OneParam(_v1)) {
    │                                                                     ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:135:120
    │
135 │         if (m::test_variant_0xc0ffee_m_Function_NoParam(_v1)) _v0 = m::unpack_0xc0ffee_m_Function_NoParam(p0) else if (m::test_variant_0xc0ffee_m_Function_OneParam(_v1)) {
    │                                                                                                                        ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:136:23
    │
136 │             let _v2 = m::unpack_0xc0ffee_m_Function_OneParam(p0);
    │                       ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:138:20
    │
138 │         } else if (m::test_variant_0xc0ffee_m_Function_TwoParam(_v1)) {
    │                    ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:139:23
    │
139 │             let _v3 = m::unpack_0xc0ffee_m_Function_TwoParam(p0);
    │                       ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:150:23
    │
150 │     fun runner_3(p0: &m::Function): u64 {
    │                       ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:154:22
    │
154 │     fun runner_4(p0: m::Function): u64 {
    │                      ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:159:26
    │
159 │         assert!(runner_1(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_1())) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:160:26
    │
160 │         assert!(runner_1(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__test_1(arg0))) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:161:26
    │
161 │         assert!(runner_1(m::pack_0xc0ffee_m_Function_TwoParam(|arg0,arg1| lambda__3__test_1(arg0, arg1))) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:162:26
    │
162 │         assert!(runner_1(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__4__test_1(1))) == 1, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:163:26
    │
163 │         assert!(runner_1(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__5__test_1(1, arg0))) == 1, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:181:26
    │
181 │         assert!(runner_2(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_2())) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:182:26
    │
182 │         assert!(runner_2(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__test_2(arg0))) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:183:26
    │
183 │         assert!(runner_2(m::pack_0xc0ffee_m_Function_TwoParam(|arg0,arg1| lambda__3__test_2(arg0, arg1))) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:184:26
    │
184 │         assert!(runner_2(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__4__test_2(1))) == 1, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:185:26
    │
185 │         assert!(runner_2(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__5__test_2(1, arg0))) == 1, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:203:19
    │
203 │         let _v0 = m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_3());
    │                   ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:210:26
    │
210 │         assert!(runner_4(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_4())) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:211:26
    │
211 │         assert!(runner_4(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__test_4(arg0))) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:212:26
    │
212 │         assert!(runner_4(m::pack_0xc0ffee_m_Function_TwoParam(|arg0,arg1| lambda__3__test_4(arg0, arg1))) == 0, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:213:26
    │
213 │         assert!(runner_4(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__4__test_4(1))) == 1, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'

error: unbound module
    ┌─ TEMPFILE1:214:26
    │
214 │         assert!(runner_4(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__5__test_4(1, arg0))) == 1, 14566554180833181696);
    │                          ^ Unbound module or type alias 'm'


task 2 lines 234-234:  run 0xc0ffee::m_closures_in_enums::test_1
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 3 lines 236-236:  run 0xc0ffee::m_closures_in_enums::test_2
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 4 lines 238-238:  run 0xc0ffee::m_closures_in_enums::test_3
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 5 lines 240-240:  run 0xc0ffee::m_closures_in_enums::test_4
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
