third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/migrated_tests/round-trip/public_closures_in_enums.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/migrated_tests/public_closures_in_enums.move`

//# publish
module 0xc0ffee::m {
    enum Function has copy, drop {
        NoParam {
            _0: ||(u64) has copy + drop,
        }
        OneParam {
            _0: |u64|(u64) has copy + drop,
        }
        TwoParam {
            _0: |u64, u64|(u64) has copy + drop,
        }
    }
    #[test_variant]
    public fun test_variant_0xc0ffee_m_Function_NoParam(p0: &Function): bool {
        p0 is NoParam
    }
    #[test_variant]
    public fun test_variant_0xc0ffee_m_Function_OneParam(p0: &Function): bool {
        p0 is OneParam
    }
    #[test_variant]
    public fun test_variant_0xc0ffee_m_Function_TwoParam(p0: &Function): bool {
        p0 is TwoParam
    }
    #[pack]
    public fun pack_0xc0ffee_m_Function_NoParam(p0: ||(u64) has copy + drop): Function {
        Function::NoParam{_0: p0}
    }
    #[pack]
    public fun pack_0xc0ffee_m_Function_OneParam(p0: |u64|(u64) has copy + drop): Function {
        Function::OneParam{_0: p0}
    }
    #[pack]
    public fun pack_0xc0ffee_m_Function_TwoParam(p0: |u64, u64|(u64) has copy + drop): Function {
        Function::TwoParam{_0: p0}
    }
    #[unpack]
    public fun unpack_0xc0ffee_m_Function_NoParam(p0: Function): ||(u64) has copy + drop {
        let Function::NoParam{_0: _v0} = p0;
        _v0
    }
    #[unpack]
    public fun unpack_0xc0ffee_m_Function_OneParam(p0: Function): |u64|(u64) has copy + drop {
        let Function::OneParam{_0: _v0} = p0;
        _v0
    }
    #[unpack]
    public fun unpack_0xc0ffee_m_Function_TwoParam(p0: Function): |u64, u64|(u64) has copy + drop {
        let Function::TwoParam{_0: _v0} = p0;
        _v0
    }
    #[borrow]
    public fun borrow_0xc0ffee_m_Function_0_0_NoParam(p0: &Function): &||(u64) has copy + drop {
        &p0._0
    }
    #[borrow]
    public fun borrow_0xc0ffee_m_Function_0_0_OneParam(p0: &Function): &|u64|(u64) has copy + drop {
        &p0._0
    }
    #[borrow]
    public fun borrow_0xc0ffee_m_Function_0_0_TwoParam(p0: &Function): &|u64, u64|(u64) has copy + drop {
        &p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0xc0ffee_m_Function_0_0_NoParam(p0: &mut Function): &mut ||(u64) has copy + drop {
        &mut p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0xc0ffee_m_Function_0_0_OneParam(p0: &mut Function): &mut |u64|(u64) has copy + drop {
        &mut p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0xc0ffee_m_Function_0_0_TwoParam(p0: &mut Function): &mut |u64, u64|(u64) has copy + drop {
        &mut p0._0
    }
}


//# publish
module 0xc0ffee::m_closures_in_enums {
    use 0xc0ffee::m;
    fun get_func(p0: &m::Function): &||(u64) has copy {
        assert!(m::test_variant_0xc0ffee_m_Function_NoParam(p0), 42);
        m::borrow_0xc0ffee_m_Function_0_0_NoParam(p0)
    }
    fun get_func_recursive(p0: m::Function): ||(u64) {
        let _v0 = &p0;
        let _v1 = m::test_variant_0xc0ffee_m_Function_NoParam(_v0);
        'l0: loop {
            loop {
                if (!_v1) {
                    if (m::test_variant_0xc0ffee_m_Function_OneParam(_v0)) break;
                    if (m::test_variant_0xc0ffee_m_Function_TwoParam(_v0)) break 'l0;
                    abort 14566554180833181697
                };
                return m::unpack_0xc0ffee_m_Function_NoParam(p0)
            };
            let _v2 = m::unpack_0xc0ffee_m_Function_OneParam(p0);
            return get_func_recursive(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__get_func_recursive(_v2)))
        };
        let _v3 = m::unpack_0xc0ffee_m_Function_TwoParam(p0);
        get_func_recursive(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__get_func_recursive(_v3, arg0)))
    }
    fun lambda__1__get_func_recursive(p0: |u64|(u64) has copy + drop): u64 {
        p0(0)
    }
    fun lambda__2__get_func_recursive(p0: |u64, u64|(u64) has copy + drop, p1: u64): u64 {
        p0(0, p1)
    }
    fun runner_1(p0: m::Function): u64 {
        let _v0 = &p0;
        let _v1 = m::test_variant_0xc0ffee_m_Function_NoParam(_v0);
        'l0: loop {
            loop {
                if (!_v1) {
                    if (m::test_variant_0xc0ffee_m_Function_OneParam(_v0)) break;
                    if (m::test_variant_0xc0ffee_m_Function_TwoParam(_v0)) break 'l0;
                    abort 14566554180833181697
                };
                let _v2 = m::unpack_0xc0ffee_m_Function_NoParam(p0);
                return _v2()
            };
            let _v3 = m::unpack_0xc0ffee_m_Function_OneParam(p0);
            return _v3(0)
        };
        let _v4 = m::unpack_0xc0ffee_m_Function_TwoParam(p0);
        _v4(0, 0)
    }
    fun runner_2(p0: m::Function): u64 {
        let _v0;
        let _v1 = &p0;
        if (m::test_variant_0xc0ffee_m_Function_NoParam(_v1)) _v0 = m::unpack_0xc0ffee_m_Function_NoParam(p0) else if (m::test_variant_0xc0ffee_m_Function_OneParam(_v1)) {
            let _v2 = m::unpack_0xc0ffee_m_Function_OneParam(p0);
            _v0 = || lambda__1__runner_2(_v2)
        } else if (m::test_variant_0xc0ffee_m_Function_TwoParam(_v1)) {
            let _v3 = m::unpack_0xc0ffee_m_Function_TwoParam(p0);
            _v0 = || lambda__2__runner_2(_v3)
        } else abort 14566554180833181697;
        _v0()
    }
    fun lambda__1__runner_2(p0: |u64|(u64) has copy + drop): u64 {
        p0(0)
    }
    fun lambda__2__runner_2(p0: |u64, u64|(u64) has copy + drop): u64 {
        p0(0, 0)
    }
    fun runner_3(p0: &m::Function): u64 {
        let _v0 = *get_func(p0);
        _v0()
    }
    fun runner_4(p0: m::Function): u64 {
        let _v0 = get_func_recursive(p0);
        _v0()
    }
    public fun test_1() {
        assert!(runner_1(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_1())) == 0, 14566554180833181696);
        assert!(runner_1(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__test_1(arg0))) == 0, 14566554180833181696);
        assert!(runner_1(m::pack_0xc0ffee_m_Function_TwoParam(|arg0,arg1| lambda__3__test_1(arg0, arg1))) == 0, 14566554180833181696);
        assert!(runner_1(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__4__test_1(1))) == 1, 14566554180833181696);
        assert!(runner_1(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__5__test_1(1, arg0))) == 1, 14566554180833181696);
    }
    fun lambda__1__test_1(): u64 {
        0
    }
    fun lambda__2__test_1(p0: u64): u64 {
        p0
    }
    fun lambda__3__test_1(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    fun lambda__4__test_1(p0: u64): u64 {
        p0
    }
    fun lambda__5__test_1(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    public fun test_2() {
        assert!(runner_2(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_2())) == 0, 14566554180833181696);
        assert!(runner_2(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__test_2(arg0))) == 0, 14566554180833181696);
        assert!(runner_2(m::pack_0xc0ffee_m_Function_TwoParam(|arg0,arg1| lambda__3__test_2(arg0, arg1))) == 0, 14566554180833181696);
        assert!(runner_2(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__4__test_2(1))) == 1, 14566554180833181696);
        assert!(runner_2(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__5__test_2(1, arg0))) == 1, 14566554180833181696);
    }
    fun lambda__1__test_2(): u64 {
        0
    }
    fun lambda__2__test_2(p0: u64): u64 {
        p0
    }
    fun lambda__3__test_2(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    fun lambda__4__test_2(p0: u64): u64 {
        p0
    }
    fun lambda__5__test_2(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    fun test_3() {
        let _v0 = m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_3());
        assert!(runner_3(&_v0) == 0, 14566554180833181696);
    }
    fun lambda__1__test_3(): u64 {
        0
    }
    public fun test_4() {
        assert!(runner_4(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__1__test_4())) == 0, 14566554180833181696);
        assert!(runner_4(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__2__test_4(arg0))) == 0, 14566554180833181696);
        assert!(runner_4(m::pack_0xc0ffee_m_Function_TwoParam(|arg0,arg1| lambda__3__test_4(arg0, arg1))) == 0, 14566554180833181696);
        assert!(runner_4(m::pack_0xc0ffee_m_Function_NoParam(|| lambda__4__test_4(1))) == 1, 14566554180833181696);
        assert!(runner_4(m::pack_0xc0ffee_m_Function_OneParam(|arg0| lambda__5__test_4(1, arg0))) == 1, 14566554180833181696);
    }
    fun lambda__1__test_4(): u64 {
        0
    }
    fun lambda__2__test_4(p0: u64): u64 {
        p0
    }
    fun lambda__3__test_4(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    fun lambda__4__test_4(p0: u64): u64 {
        p0
    }
    fun lambda__5__test_4(p0: u64, p1: u64): u64 {
        p0 + p1
    }
}


//# run 0xc0ffee::m_closures_in_enums::test_1

//# run 0xc0ffee::m_closures_in_enums::test_2

//# run 0xc0ffee::m_closures_in_enums::test_3

//# run 0xc0ffee::m_closures_in_enums::test_4